plugins {
    alias(libs.plugins.android.application)
}

/** 从 release  keystore 读取签名证书 SHA-256（小写十六进制），用于防二次打包校验；失败或 Debug 构建返回空则 Native 跳过校验 */
def getReleaseSignatureSha256() {
    try {
        def keystore = file("release.keystore")
        if (!keystore.exists()) return ""
        def proc = ["keytool", "-list", "-v", "-keystore", keystore.absolutePath, "-alias", "antifrida", "-storepass", "antifrida123"].execute()
        proc.waitFor()
        def line = proc.text.readLines().find { it != null && it.trim().startsWith("SHA256:") }
        if (line != null) {
            return line.replaceAll("SHA256:", "").replaceAll(":", "").replaceAll(/\s/, "").trim().toLowerCase()
        }
    } catch (Exception ignored) { }
    return ""
}

android {
    namespace 'anti.rusda'
    compileSdk 36

    defaultConfig {
        applicationId "anti.rusda"
        minSdk 24
        targetSdk 36
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"

        // Only build arm64-v8a for simplicity
        ndk {
            abiFilters 'arm64-v8a'
        }

        externalNativeBuild {
            cmake {
                cppFlags "-O2 -fvisibility=hidden"
                cFlags "-O2 -fvisibility=hidden"
            }
        }
    }

    signingConfigs {
        release {
            storeFile file("release.keystore")
            storePassword "antifrida123"
            keyAlias "antifrida"
            keyPassword "antifrida123"
        }
    }

    buildTypes {
        release {
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            signingConfig signingConfigs.release
            ndk {
                debugSymbolLevel 'SYMBOL_TABLE'
            }
            externalNativeBuild {
                cmake {
                    arguments "-DEXPECTED_SIGNATURE_SHA256=" + getReleaseSignatureSha256()
                }
            }
        }
        debug {
            // 使用与 release 相同的 Native 优化级别 (-O2)，避免 Run 时检测行为与打包后不一致
            // 原因：-O0 会改变内联、栈帧、LR 检测等行为，导致部分检测在 debug 下失效
            externalNativeBuild {
                cmake {
                    cppFlags "-O2 -fvisibility=hidden -g"
                    cFlags "-O2 -fvisibility=hidden -g"
                }
            }
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
    externalNativeBuild {
        cmake {
            path file('src/main/cpp/CMakeLists.txt')
            version '3.22.1'
        }
    }
    buildFeatures {
        viewBinding true
        buildConfig true
    }
}

dependencies {
    implementation libs.appcompat
    implementation libs.material
    implementation libs.constraintlayout
    implementation libs.recyclerview
    implementation libs.viewpager2
    implementation libs.cardview
    implementation libs.coordinatorlayout
    implementation libs.localbroadcastmanager
    implementation libs.bouncycastle
    testImplementation libs.junit
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core
}